--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ footer {
     width: 2.5rem;
     height: 2.5rem;
     display: inline-block;
-    line-height: 38px;
+    line-height: 40px;
     text-align: center;
     border-radius: 50%;
     margin: 0 8px;
@@ -284,7 +284,11 @@ footer {
     background-color: var(--body-color);
 }
 
+/* about us kontakt form css stopper her. */
 
+
+
+/* Alle breakpoints fra main.css. */
 
   @media screen and (max-width: 1118px) {
     .carousel img{
