--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,7 @@
-/*=============== GOOGLE FONTS ===============*/
+/*=============== google fonts ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
+/*=============== CSS Root variabler start her. ===============*/
 :root {
   --header-height: 3.5rem;
 
@@ -25,14 +25,14 @@
   --z-fixed: 100;
 }
 
-/*========== Responsive typography ==========*/
+/*========== Responsive font ==========*/
 @media screen and (min-width: 1024px) {
   :root {
     --normal-font-size: 1rem;
   }
 }
 
-/*=============== BASE ===============*/
+/*=============== Resets og global selectors. ===============*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -53,13 +53,12 @@ a {
   text-decoration: none;
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
+/*=============== HEADER ===============*/
 .container {
   max-width: 1120px;
   margin-inline: 1.5rem;
 }
 
-/*=============== HEADER ===============*/
 .header {
   position: absolute;
   top: 0;
@@ -120,7 +119,7 @@ a {
   opacity: 0;
 }
 
-/* Navigation for mobile devices */
+/* Nav for mobil */
 @media screen and (max-width: 1118px) {
   .nav__menu {
     position: absolute;
@@ -160,14 +159,14 @@ a {
   background-color: var(--blue-color-light);
 }
 
-/* Show menu */
+/* Css til at vise menu */
 .show-menu {
   opacity: 1;
   top: 3.5rem;
   pointer-events: initial;
 }
 
-/* Show icon */
+/* css til at vise ikoner */
 .show-icon .nav__burger {
   opacity: 0;
   transform: rotate(90deg);
@@ -177,7 +176,7 @@ a {
   transform: rotate(90deg);
 }
 
-/*=============== DROPDOWN ===============*/
+/*=============== dropdown menu ===============*/
 .dropdown__item {
   cursor: pointer;
 }
@@ -214,20 +213,20 @@ a {
   transition: max-height .4s ease-out;
 }
 
-/* Show dropdown menu */
+/* Viser dropdown */
 .dropdown__item:hover .dropdown__menu {
   max-height: 1000px;
   transition: max-height .4s ease-in;
 }
 
-/* Rotate dropdown icon */
+/* Rotere ikonere */
 .dropdown__item:hover .dropdown__arrow {
   transform: rotate(180deg);
 }
 
 
 /*=============== BREAKPOINTS ===============*/
-/* For small devices */
+/* For små skærme */
 @media screen and (max-width: 430px) {
   .container {
     margin-inline: 1rem;
@@ -244,7 +243,7 @@ a {
   }
 }
 
-/* For large devices */
+/* For store skærme */
 @media screen and (min-width: 1118px) {
   .container {
     margin-inline: auto;
@@ -296,12 +295,8 @@ a {
     padding-inline: 1rem 3.5rem;
   }
 
-  /* .dropdown__subitem .dropdown__link {
-    padding-inline: 1rem;
-  } */
 
-
-  /* Show dropdown menu */
+  /* Vis dropdown menu */
   .dropdown__item:hover .dropdown__menu {
     opacity: 1;
     top: 5.5rem;
